--- a/src/custom.css
+++ b/src/custom.css
@@ -1,8 +1,27 @@
+body {
+  overflow-y: scroll;
+}
+
 .container {
   width: 420px;
   margin: 0 auto;
   margin-top: 30px;
-  border: 1px solid red;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.m-t-15 {
+  margin-top: 15px;
+}
+
+.list-item {
+  padding: 4px 0;
+}
+
+.ant-page-header {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 0px 29px 0px;
 }
 
 .fizz {
